73. Make File and DB implementations both work